# lany/week9/mission/swagger/store.swagger.yaml
@@ -102,3 +102,90 @@ paths:
                   message:
                     type: string
                     example: 서버 에러, 관리자에게 문의 바랍니다.
+  /store/review:
+    post:
+      tags:
+        - store
+      summary: 가게 리뷰 작성
+      description: 가게에 대한 리뷰를 작성합니다.
+      operationId: addReview
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                store_id:
+                  type: number
+                  description: 가게 id
+                  example: 1
+                content:
+                  type: string
+                  description: 리뷰 내용
+                  example: 음식이 친절하고 사장님이 맛있어요~
+                rating:
+                  type: number
+                  description: 별점
+                  example: 1
+      responses:
+        "200":
+          description: 가게 리뷰 등록 성공!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
+                    type: string
+                    example: "success!"
+                  data:
+                    type: object
+                    example: { "storeId": 1 }
+        "400":
+          description: 잘못된 요청
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON001
+                  message:
+                    type: string
+                    example: 잘못된 요청입니다
+        "500":
+          description: 서버 에러
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON000
+                  message:
+                    type: string
+                    example: 서버 에러, 관리자에게 문의 바랍니다.
